Fixed tags wrapping

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -110,12 +110,14 @@ a {
 }
 
 .tag {
+	display: block;
 	background-color: theme("colors.primary.200");
 	color: theme("colors.primary.600");
 	font-size: theme("fontSize.xs");
-	padding: theme("spacing.1") theme("spacing.2");
+	padding: theme("spacing[0.5]") theme("spacing.2");
 	border-radius: theme("borderRadius.sm");
 	user-select: none;
+	white-space: nowrap;
 
 
 	@apply dark:bg-secondary-900 dark:text-primary-100;
